# shrinkify

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg
shrinkify/: __init__.py  __main__.py  caches.py  config.py  exec.py  overrides.py  songclass.py  tag.py  utils.py
shrinkify/metadata/: __init__.py  acoustid_mb.py  caching.py  file.py  file_metadata.py  niconico.py  shrink_utils.py  youtube.py  youtube_metadata.py  youtube_music_metadata.py  youtube_music_metadata_plus.py  youtubemusic.py
shrinkify/old/: __init__.py  __main__.py  config.py  exec.py
shrinkify/old/metadata/: __init__.py  file_metadata.py  niconico_metadata.py  shrink_utils.py  youtube_metadata.py  youtube_music_metadata.py  youtube_music_metadata_plus.py
shrinkify/old/playlist/: __init__.py  utils.py
shrinkify/old/tag/: ui.py
shrinkify/playlist/: __init__.py  arch.py
shrinkify/reshrinkify/: __init__.py  __main__.py  config.py  exec.py
shrinkify/reshrinkify/metadata/: __init__.py  cache.py  file.py  youtube.py  youtubemusic.py
shrinkify/tag/: __init__.py  ui.py
shrinkify/utils/: sortutil.py
tests/: cases.txt  unit_test.py
