[metadata]
name = shrinkify
version = 0.0.3
author = InfinusA
author_email = test@email.com
description = Media library converter for people who like pretty metadata
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where =

[options.entry_points]
console_scripts =
        shrinkify = shrinkify.exec:main
        sshrinkify = shrinkify.exec:only_shrink
        listify = shrinkify.exec:only_playlist
